# formatics

./: .editorconfig  .gitignore  API_STABILITY.md  AUDIT_REPORT.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING-AGENT.md  CONTRIBUTING-GPT.md  CONTRIBUTING.md  FILESTATE_BLUEPRINT.md  FORMATICS_AGENT_PROTOCOL.md  FORMATICS_GPT_PROTOCOL.md  GOVERNANCE.md  LICENSE  PREFIX_SUFFIX_ORGANIZATION.md  QUICK_REFERENCE.md  README.md  filestate.py  formET_0a.txt  formET_1a.txt  formET_2a.txt  formET_A1.txt  formET_B1.txt  formET_Ca.txt  prefix_suffix_index.py  pyproject.toml
.github/workflows/: ci.yml
examples/: README.md  example_form_composition.py  example_leap_aware.py  example_slot_orbit.py
formET_corpus/: formET.ods  formET_C1.txt
formatics/: __init__.py  exceptions.py  filestate.py  folderleap.py  orbit.py  slot.py
formatics/form/: __init__.py  anchor.py  elements.py
formatics/logs/: __init__.py  history.py
formatics/paths/: __init__.py  graph.py
src/: formatic_mark.py
tests/: test_filestate.py  test_formatic_mark.py
theory/: AXIOMS.md  THEORY_TO_CODE.md  categorical_interpretation.md  formatic_mark.md  index.md  necessity_proof.md  python_mapping.md
tools/: prefix_suffix_index.py  repo_standardizer.py
