[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "formatics"
version = "0.1.0"
dependencies = []
description = "Formatics: Element Theory and structural syntax."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "Nicholas Gerrans" }
]
